fix(events): use lower z-index to prevent conflict with mdDialog
Closes #264

--- a/src/less/month.less
+++ b/src/less/month.less
@@ -92,7 +92,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 50;
 }
 .cal-slide-content ul.unstyled {
   margin-bottom: 0;
